--- a/CRUD basico/package.json
+++ b/CRUD basico/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
+    "jsonwebtoken": "^9.0.2",
     "mssql": "^10.0.2",
     "mysql": "^2.18.1"
   },
